[tool.poetry]
name = "iscc-foundation"
version = "0.1.0"
description = "ISCC Foundation Website"
authors = ["Titusz Pan <tp@iscc.foundation>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "*"
black = "*"
mdformat = "*"
mdformat-gfm = "*"
mdformat-tables = "*"
mdformat_frontmatter = "*"
poethepoet = "^0.16.1"

[tool.poe.tasks]
format-code = { cmd = "poetry run black .", help = "Code formating with black" }
format-md = { cmd = "mdformat --wrap 100 .", help = "Markdown formating with mdformat" }
all = ["format-code", "format-md"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
